# flask-template

./: .flake8  .flaskenv  .pre-commit-config.yaml  .prettierignore  .prettierrc  .pylintrc  README.md  pyproject.toml  tox.ini
app/: app.py  cdn.py  cdn.toml  config.py  flask_utils.py  logger.py  main_view.py  utils.py  wsgi.py
app/login/: README.md  login_view.py
app/login/templates/: login.html
app/static/js/: notyf.js
app/templates/: base.html  raw.html
app/templates/errors/: 404.html
app/templates/fragments/: meta.html
