[project]
name = "app"
version = "0.1.0"
description = "Simple Template to bootstrap a flask app"
authors = [{ name = "arabidopsis", email = "ian.castleden@gmail.com" }]
requires-python = "~=3.11"
readme = "README.md"
license = "MIT"
dependencies = [
    "flask>=3.0.3,<4",
    "python-dotenv>=1.0.1,<2",
]

[dependency-groups]
install = [
	'flask-nginx',
	'gunicorn'
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
